--- a/compose.yaml.sample
+++ b/compose.yaml.sample
@@ -2,5 +2,8 @@ services:
   chappy-discord-bot:
     image: chappy-discord-bot
     restart: always
-    env_file:
-      - ".env"
+    environment:
+      OPENAI_TOKEN: 
+      OPENAI_MODEL: 
+      DISCORD_BOT_TOKEN: 
+      DISCORD_CHANNEL_ID: 
