feat: GeminiのOpenAI互換APIをサポート

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
 OPENAI_TOKEN=
 OPENAI_MODEL=
+# If you want use Gemini API, enable it
+#OPENAI_BASEURL=https://generativelanguage.googleapis.com/v1beta/openai/
 # See README.md for supported models.
 DISCORD_BOT_TOKEN=
 DISCORD_CHANNEL_ID=
