:wrench: 環境変数の読み込み方式を変更
- compose.yaml に書いていたものを .env から読み出すようにした

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,10 @@
+# if you want to use Google Gemini, enable it
+# OPENAI_MODEL=gemini-2.0-flash
+# OPENAI_BASEURL=https://api.openai.com/v1/models
+
+# gpt
 OPENAI_TOKEN=
-OPENAI_MODEL=
-# If you want use Gemini API, enable it
-#OPENAI_BASEURL=https://generativelanguage.googleapis.com/v1beta/openai/
-# See README.md for supported models.
+OPENAI_MODEL=gpt-4o-mini
+
 DISCORD_BOT_TOKEN=
 DISCORD_CHANNEL_ID=
